# vinyl

./: .gitignore  Cargo.toml  README.md
src/: main.rs  vinyl.rs
