[package]
name = "vinyl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["ws"] }
tokio = { version = "1.28.1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
serde = "1.0"
dotenv = "0.15"
